[package]
name = "boxer"
version = "0.1.0"
edition = "2021"

[dependencies]
access-unit = { git = "https://github.com/wavey-ai/access-unit.git" }
bytes = "1.6.0"
mse_fmp4 = { git = "https://github.com/wavey-ai/mse_fmp4.git" }
soundkit = { git = "https://github.com/wavey-ai/soundkit.git" }
tracing = "0.1.40"
