[package]
name = "boxer"
version = "0.1.2"
edition = "2021"
description = "Fragmented MP4 and RTMP media boxing utilities for Wavey"
license = "MIT"
repository = "https://github.com/wavey-ai/boxer"

[dependencies]
access-unit = { version = "0.1.2", git = "https://github.com/wavey-ai/access-unit.git" }
bytes = "1.6.0"
libopus-rs = "0.0.2"
